feat: implement mapping logic